- using server setting